# infnet-ml-sk-learn-1

./: .dockerignore  .gitignore  01_eda_and_problem_definition.ipynb  02_baseline_perceptron.ipynb  03_decision_tree.ipynb  04_cross_validation_and_tuning.ipynb  05_advanced_model.ipynb  06_final_report.ipynb  Dockerfile  PLAN.md  PLAN_PARTE3.md  PLAN_PARTE4.md  PLAN_PARTE5.md  PROJECT_GUIDE.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  utils.py
.github/workflows/: ci.yml
configs/: data.yaml
docs/: data_foundation.md  final_selection_criteria.md  integrity_manifest.md  parte_2_implementation_report.md  roteiro_video.md
reports/: relatorio_tecnico.md
reports/parte_3/: comparison_baseline.md  comparison_tuned.md
reports/parte_4/: comparison_dimred.md  comparison_pca_vs_lda.md
reports/parte_5/: consolidated_results.md  final_selection.md  final_selection_rationale.md  test_metrics.json
reports/parte_6/: drift_report.md  operacao.md
scripts/: audit_sample.py  build_clean_dataset.py  evaluate_final.py  generate_comparison_dimred.py  generate_comparison_table.py  generate_consolidated_results.py  run_data_qa.py  run_drift_report.py  select_final_candidate.py  train_baseline.py  train_dimred.py  train_tuned.py
src/credit_default/audit/: __init__.py  recompute_metrics.py
src/credit_default/data/: __init__.py  diagnostics.py  fingerprint.py  ingest.py  schema.py  splits.py
src/credit_default/evaluation/: __init__.py  metrics.py  plots.py
src/credit_default/features/: __init__.py  dimred.py  preprocessing.py
src/credit_default/models/: __init__.py  pipeline.py  registry.py  train.py
src/credit_default/monitoring/: __init__.py  drift.py
src/credit_default/serving/: __init__.py  app.py  predictor.py  schemas.py
tests/: conftest.py  test_api.py  test_data_foundation.py  test_dimred.py  test_drift.py  test_generate_comparison_dimred.py  test_mlflow_utils.py  test_parte5_smoke.py  test_pipeline.py  test_preprocessing.py  test_recompute_metrics.py  test_registry.py  test_run_naming.py  test_serving.py  test_train_dimred.py
(+20 files in other folders)
