[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infnet-sk-learn-models"
version = "0.2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xlrd>=2.0.1",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "mlflow>=2.9",
    "tabulate>=0.10.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
exclude = ["*.ipynb", "utils.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 99
target-version = ["py311"]
exclude = '(\.ipynb|utils\.py)'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
